fix: overflow styling issues causing sticky positioning to not work

--- a/frontend/sass/layout/_navigation.scss
+++ b/frontend/sass/layout/_navigation.scss
@@ -643,10 +643,6 @@ $scale-y-amount: .25;
 	}
 }
 
-#root {
-	overflow: hidden;
-}
-
 .header {
 	pointer-events: none;
 	top: $header-top;
